2024-06-25  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-eclass-mode): New major mode for editing
	of eclasses, split off from ebuild-mode.
	(auto-mode-alist): Add ebuild-eclass-mode.
	* ebuild-mode.texi (ebuild-eclass-mode): Chapter renamed from
	eclass-mode and updated.

2024-06-09  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.71 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2024-01-08  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.70 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* keyword-generation.sh: Create only the bare list of keywords,
	without the variable definition.
	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Move the begin and end marker comments into the defvar.

2023-11-29  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el (glep-mode-add-font-lock): Specify faces directly
	instead of using variables.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-0):
	Use font-lock-builtin-face for package manager commands.

2023-11-05  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.69 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* glep-mode.el: Doc fixes.

2023-10-15  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el:
	* gentoo-newsitem-mode.el:
	* glep-mode.el:
	* devbook-mode.el: Sharp-quote all function names.

	* ebuild-mode.el (ebuild-repo-mode-menu):
	* gentoo-newsitem-mode.el (gentoo-newsitem-mode-menu):
	* glep-mode.el (glep-mode-menu):
	* devbook-mode.el (devbook-mode-menu): Backquote is not needed.

	* ebuild-mode.el (ebuild-mode-time-string): Move setting of TZ
	into the unwind-protect form.

	* ebuild-mode.el (static-if): New macro, taken from APEL.
	(sh-must-be-shell-mode): Use it. This should finally fix the
	byte-compile warning for defadvice in Emacs 30.

	* glep-mode.el (glep): Change parent group to text, because the wp
	group is deprecated since Emacs 26.
